Set navbar positioning to fixed and resize the about me details to prevent overflow

--- a/lpf/src/components/AboutMe/AboutMeDetails.module.css
+++ b/lpf/src/components/AboutMe/AboutMeDetails.module.css
@@ -1,23 +1,16 @@
 .details{
-    padding: 10px;
     width: 600px;
     position: relative;
     left: 50%;
-    animation: fadeIn 2s linear forwards;
-}
-
-.divider{
-    border: 1px solid red;
-}
-
-.details{
     text-align: justify;
+    animation: fadeIn 2s linear forwards;
 }
 
 @media screen and (max-width: 1023px){
     .details{
         position: static;
-        width: 95vw;
+        padding: 10px;
+        width: calc(97vw - 10px);
         font-size: 24px;
     }
 }
